fix regression with spacing

--- a/react/javascript/src/components/gherkin/StepItem.module.scss
+++ b/react/javascript/src/components/gherkin/StepItem.module.scss
@@ -2,11 +2,6 @@ $statusWidth: 1.5em;
 
 .container {
   display: flex;
-
-  // steps get consistent spacing between them
-  & + & {
-    margin-top: 0.25rem;
-  }
 }
 
 .status {
@@ -21,6 +16,6 @@ $statusWidth: 1.5em;
 
   // bit of detail (doc string, data table, error, attachment) get consistent spacing between them
   > * + * {
-    margin-top: 0.25rem !important;
+    margin-top: 0.25em !important;
   }
 }
