--- a/react/javascript/src/styles/styles.scss
+++ b/react/javascript/src/styles/styles.scss
@@ -11,6 +11,10 @@ $summary-border-color: rgba(0, 0, 0, 0.1);
   > li {
     list-style: none;
   }
+
+  > li + li {
+    margin-top: 0.25em;
+  }
 }
 
 // TODO encapsulate in a component
